# tiny-cli

./: .gitignore  .mise.toml  AGENTS.md  LICENSE  README.md  models-watch.rss  models-watch.xml
opencode-config-lens/: .mise.toml  AGENTS.md  Cargo.toml  PRD.md  README.md
opencode-config-lens/.beads/: interactions.jsonl  last-touched  metadata.json
opencode-config-lens/.beads/backup/: backup_state.json  manifest
opencode-config-lens/.beads/dolt/: config.yaml
opencode-config-lens/.weave/plans/: 2026-04-05-model-list-paging.md  config-ingestion-module-refactor.md  config-source-refactor-test-plan.md  opencode-model-report-one-shot-refactor.md
opencode-config-lens/src/: lib.rs  runtime.rs
opencode-config-lens/src/app/: mod.rs
opencode-config-lens/src/config/: loader.rs  mod.rs  opencode.rs  types.rs  usage.rs  weave.rs
opencode-config-lens/src/data/: inventory.rs  mod.rs
opencode-config-lens/src/report/: adapter.rs  builder.rs  mod.rs  model.rs  plain.rs
opencode-config-lens/src/runtime/: paging.rs
opencode-config-lens/src/v2/: runtime.rs
opencode-config-lens/tests/: acceptance_config_sources.rs  acceptance_errors.rs  acceptance_refresh.rs  acceptance_sorting.rs  acceptance_startup.rs  cli_help.rs  report_plain_renderer.rs  report_rows.rs
opencode-config-lens/tests/support/: mod.rs  scenario.rs
opencode-model-report/: .mise.toml  AGENTS.md  Cargo.toml  PRD.md  README.md
opencode-model-report/.weave/plans/: opencode-model-report-one-shot-refactor.md
opencode-model-report/src/: lib.rs  main.rs  runtime.rs
opencode-model-report/src/app/: state.rs
opencode-model-report/tests/: acceptance_errors.rs  acceptance_refresh.rs  acceptance_sorting.rs  acceptance_startup.rs  cli_help.rs  report_plain_renderer.rs  report_rows.rs  v2_report_rows.rs
skill-primer/: .mise.toml  AGENTS.md  Cargo.toml  PLAN-first-acceptance-test.md  PLAN-introduce-clap.md  PLAN-skill-discovery.md  README.md  build.rs  prd.md
skill-primer/src/: lib.rs  main.rs
skill-primer/tests/: cli.rs  cli_basics.rs  common.rs  config.rs  end_to_end.rs  help.rs  include_validation.rs  list_skills.rs  ls.rs  output_formatting.rs  prime.rs  show_config.rs  skill_discovery.rs  skill_name_validation.rs
(+97 files in other folders)
