[package]
name = "opencode-config-lens"
version = "0.1.0"
edition = "2021"
authors = ["Hans"]
description = "Inspect OpenCode model configuration and usage"
autobins = false

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
ratatui = "0.28"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "ocl"
path = "src/bin/ocl.rs"
