[package]
name = "opencode-config-lens"
version = "0.1.0"
edition = "2021"
authors = ["hanlho"]
description = "Inspect OpenCode model configuration and usage"
autobins = false

[dependencies]
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
ratatui = "0.28"

[profile.release]
opt-level = "z"       # Optimize for size
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Abort on panic instead of unwinding
lto = true            # Full link-time optimization
strip = true          # Strip symbols

[[bin]]
name = "ocl"
path = "src/bin/ocl.rs"
