[package]
name = "opencode-model-report"
version = "0.1.0"
edition = "2021"
authors = ["Hans"]
description = "Report OpenCode model usage and costs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
owo-colors = { version = "4", features = ["supports-colors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "opencode-model-report"
path = "src/main.rs"
