[package]
name = "skills-primer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
indoc = "2"
[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
rstest = "0.26.1"
wait-timeout = "0.2"
